# Laboratorio-Paoletti

./: .gitignore  Activity.cpp  Activity.h  CMakeLists.txt  Date.cpp  Date.h  README.md  Register.cpp  Register.h  Time.cpp  Time.h  main.cpp
Test/: CMakeLists.txt  DateTest.h  RunAllTests.h  TimeTest.cpp  TimeTest.h
Test/googletest/include/gtest/: gtest.h
Test/tests/: ActivityTest.cpp  ActivityTest.h  CMakeLists.txt  DateTest.cpp  DateTest.h  RegisterTest.cpp  RunAllTests.cpp  TimeTest.cpp  TimeTest.h
